created game of dice , drums using eventlisterners and other concepts

--- a/index.html
+++ b/index.html
@@ -6,11 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Cabin&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1 id="h11">Hello</h1>
-    <h2 id="demo">Welcome to JS</h2>
-    <h2 id="h22">This is code 1</h2>
-    <script src="index.js"></script>
+    <div id="main">
+        <h1 id="h11">Hello</h1>
+        <h2 id="demo">Welcome to JS</h2>
+        <h2 id="h22">This is code 1</h2>
+        
+        <h3 class="sum" id="sum1">sum</h3>
+        <h3 class="sum" >sum1</h3>
+        <h4><a href="https://www.w3schools.com/js/">go to</a></h4>
+    </div> 
+    <div id="container">
+        <h1>GAME</h1>
+        <h3 id="result">player</h3>
+        <img id="dice1" src="dice/dice1.png">
+        <img id="dice2" src="dice/dice2.png">
+        
+    </div>
+    <div id="drummer">
+        <button class="btn">Drum 1</button> 
+        <button class="btn">Drum 2</button>
+        <button class="btn">Drum 3</button>
+        <button class="btn">Drum 4</button>
+        <button class="btn">Drum 5</button>
+        <button class="btn">Drum 6</button>
+    </div>
+    <script src="index.js"></script>   
 </body>
 </html>
