--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <div id="main">
         <h1 id="h11">Hello</h1>
+        <h3 id="hist">number </h3>
         <h2 id="demo">Welcome to JS</h2>
         <h2 id="h22">This is code 1</h2>
         
@@ -33,6 +34,21 @@
         <button class="btn">Drum 5</button>
         <button class="btn">Drum 6</button>
     </div>
-    <script src="index.js"></script>   
+    <p id="back">Click to go back</p>
+    <form>
+        <label>First name</label>
+        <input type="text" id="fname">
+         
+        <br>
+        <label>last name</label>
+        <input type="text" id="lname">
+        <br>
+        <label>age</label>
+        <input type="number" id="age">
+        <br>    
+    </form>
+    <button id="sub">submit</button>
+    <script src="index.js"></script> 
+
 </body>
 </html>
