created script2 where table items can be stored

--- a/index.html
+++ b/index.html
@@ -45,9 +45,19 @@
         <br>
         <label>age</label>
         <input type="number" id="age">
-        <br>    
+        <br> 
+         
     </form>
     <button id="sub">submit</button>
+    <di id="tb">
+        <table id = "tab">
+            <tr>
+                <th>fname</th>
+                <th>lname</th>
+                <th>age</th>
+            </tr>
+        </table>
+    </di>
     <script src="index.js"></script> 
 
 </body>
